[gd_scene load_steps=23 format=3 uid="uid://culixhqbfyowp"]

[ext_resource type="Texture2D" uid="uid://dud1j7e1fkkvm" path="res://Resource/bc_0.png" id="1_4nj6y"]
[ext_resource type="Script" uid="uid://d0yx7hq5gdv0v" path="res://Tank/tank.gd" id="1_rpsag"]
[ext_resource type="PackedScene" uid="uid://c8fokg0yxgmhc" path="res://Tank/explotion.tscn" id="3_0hrsi"]
[ext_resource type="Script" uid="uid://bbohk3pxn45ja" path="res://Tank/tank_area_2d.gd" id="4_7hbh6"]
[ext_resource type="AudioStream" uid="uid://dhdy56wk3mcvp" path="res://sound/shoot.ogg" id="4_hk8tj"]
[ext_resource type="Script" uid="uid://bidfc50cxfafj" path="res://Tank/shield.gd" id="4_p2xte"]
[ext_resource type="AudioStream" uid="uid://dv8figm3sdx5b" path="res://sound/ice.ogg" id="5_1cq60"]
[ext_resource type="AudioStream" uid="uid://ccebk5r2ehg3o" path="res://sound/shieldhit.ogg" id="8_ju3hr"]

[sub_resource type="Animation" id="Animation_1oq11"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 128, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_3k7ce"]
resource_name = "down"
length = 0.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 128, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_f6iin"]
resource_name = "left"
length = 0.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 128, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_t5hup"]
resource_name = "right"
length = 0.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 128, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="Animation" id="Animation_c06jl"]
resource_name = "up"
length = 0.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 128, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fi5gh"]
_data = {
&"RESET": SubResource("Animation_1oq11"),
&"down": SubResource("Animation_3k7ce"),
&"left": SubResource("Animation_f6iin"),
&"right": SubResource("Animation_t5hup"),
&"up": SubResource("Animation_c06jl")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k6lwu"]
size = Vector2(48, 48)

[sub_resource type="Animation" id="Animation_bw3p4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ShieldSprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(96, 256, 32, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ShieldSprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ShieldSprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../ShieldSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_dkl0n"]
resource_name = "shield"
length = 0.06667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../ShieldSprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(96, 256, 32, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ShieldSprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ShieldSprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../ShieldSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_epeee"]
_data = {
&"RESET": SubResource("Animation_bw3p4"),
&"shield": SubResource("Animation_dkl0n")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bxe6u"]
size = Vector2(64.2, 64.2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8y51"]
size = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_em6vj"]
size = Vector2(48, 15.9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_km6ub"]
size = Vector2(48, 15.9)

[node name="Tank" type="CharacterBody2D"]
physics_interpolation_mode = 2
disable_mode = 1
motion_mode = 1
safe_margin = 0.001
script = ExtResource("1_rpsag")
exploration = ExtResource("3_0hrsi")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("1_4nj6y")
hframes = 8
region_enabled = true
region_rect = Rect2(0, 0, 128, 16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fi5gh")
}

[node name="TankArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4096
script = ExtResource("4_7hbh6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TankArea2D"]
shape = SubResource("RectangleShape2D_k6lwu")

[node name="Shield" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource("4_p2xte")

[node name="ShieldTimer" type="Timer" parent="Shield"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="ShieldSprite2D" type="Sprite2D" parent="Shield"]
scale = Vector2(4, 4)
texture = ExtResource("1_4nj6y")
hframes = 2
region_enabled = true
region_rect = Rect2(96, 256, 32, 16)

[node name="ShieldAnimationPlayer" type="AnimationPlayer" parent="Shield"]
root_node = NodePath("../ShieldTimer")
libraries = {
&"": SubResource("AnimationLibrary_epeee")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield"]
shape = SubResource("RectangleShape2D_bxe6u")

[node name="RigidityTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FlickerTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="AudioShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_hk8tj")
volume_db = -5.0

[node name="IceArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="IceArea2D"]
shape = SubResource("RectangleShape2D_s8y51")

[node name="Timer" type="Timer" parent="IceArea2D"]
wait_time = 0.4
one_shot = true

[node name="AudioIce" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1cq60")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, -23.9)
shape = SubResource("RectangleShape2D_em6vj")
one_way_collision = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="."]
position = Vector2(0, 23.9)
rotation = 3.14159
shape = SubResource("RectangleShape2D_em6vj")
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(23.9, 0)
rotation = 1.5708
shape = SubResource("RectangleShape2D_km6ub")
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2(-23.9, 0)
rotation = -1.5708
shape = SubResource("RectangleShape2D_km6ub")
one_way_collision = true

[node name="AudioHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ju3hr")

[connection signal="area_entered" from="TankArea2D" to="." method="_on_tank_area_2d_area_entered"]
[connection signal="timeout" from="Shield/ShieldTimer" to="." method="_on_shield_timer_timeout"]
[connection signal="timeout" from="RigidityTimer" to="." method="_on_rigidity_timer_timeout"]
[connection signal="timeout" from="FlickerTimer" to="." method="_on_flicker_timer_timeout"]
[connection signal="area_entered" from="IceArea2D" to="." method="_on_ice_area_2d_area_entered"]
[connection signal="timeout" from="IceArea2D/Timer" to="." method="_on_timer_timeout"]
